# phonikud-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/: agent_openai.py  config.py  main.py  noise_filter.py  phonemize.py  record.py  speech_to_text.py  text_to_speech.py  vad.py  wake_word.py
