[project]
name = "phonikud-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "phonikud-tts>=0.1.3",
    "pvcobra>=2.0.5",
    "pvkoala>=2.0.4",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.2",
]
