[project]
name = "phonikud-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "phonikud-tts>=0.1.3",
    "pvcobra>=2.0.5",
    "pvkoala>=2.0.4",
    "pvporcupine>=3.0.5",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "pywhispercpp>=1.3.3",
    "requests>=2.32.4",
    "sounddevice>=0.5.2",
]
